--- a/pokebattle/src/styles.css
+++ b/pokebattle/src/styles.css
@@ -1,1 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background-color: black;
+}
+.battlebox{
+    border: solid white 3px;
+    height: 800px;
+    background-size: cover;
+}
+.fightbox{
+    margin: 50px auto 50px auto;
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 100px;
+    height: 100px;
+}
+.result{
+    margin: auto;
+}
+
+.result img{ 
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+}
