--- a/pokebattle/src/app/components/nasa-bg/nasa-bg.component.html
+++ b/pokebattle/src/app/components/nasa-bg/nasa-bg.component.html
@@ -1,13 +1,10 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <img src="assets/pokebattler_white.png" alt="">
-        </div>
-    </div>
-    <div class="row">
+
         <div style="background-image: url({{apod?.hdurl}});" class="battlebox mb-5" >
-            <p> {{apod?.title}}</p>
+           
             <div class="container">
+                <div class="row">
+                    <div class="col-sm-12"><div class="top"><p>Astronomy: {{apod?.title}} - <span>Victory count: {{cont}}</span></p></div></div>
+                </div>
                 <div class="row">
                     <div class="col-md-4"></div>
                     <div class="col-md-4 align-items-center">
@@ -17,26 +14,26 @@
                     </div>
                     <div class="col-md-4"></div>
                 </div>
-                <div class="row">
+                <div class="row middle">
                     <div class="col-md-3"></div>
                     <div class="col-md-6">
-                        <div class="result"><img src="assets/you_win.png" alt=""></div>
+                        <div class="result" [hidden] = "visibility"><img src="assets/{{img}}" alt="" ></div>
                     </div>
                     <div class="col-md-3"></div>
                 </div>
                 <div class="row">
                     <div class="col-md-4 align-items-center"> 
-                        <div class="fightbox">
+                        <div class="fightbox" (click)="Fight()">
                             <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/34.png"  alt="">
                         </div>
                     </div>
                     <div class="col-md-4 align-items-center">
-                        <div class="fightbox">
+                        <div class="fightbox" (click)="Fight()">
                             <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/100.png" alt="">
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="fightbox">
+                        <div class="fightbox" (click)="Fight()">
                             <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/150.png"  alt="">
                         </div>
                     </div>
@@ -44,6 +41,5 @@
 
             </div>
         </div>
-    </div>
-</div>
+
 
