--- a/pokebattle/src/app/app.component.html
+++ b/pokebattle/src/app/app.component.html
@@ -1,2 +1,16 @@
-<app-nasa-bg></app-nasa-bg>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <img src="assets/pokebattler_white.png" alt="">
+        </div>
+    </div>
+    <div class="row">
 <router-outlet></router-outlet>
+
+</div>
+<div class="row">
+    <div class="col-sm-12 footer">
+        <p>&copy; PokeBattle 2021 - Copyright law is too confusing.</p>
+    </div>
+</div>
+</div>
