--- a/pokebattle/src/styles.css
+++ b/pokebattle/src/styles.css
@@ -12,7 +12,9 @@ body{
     background-color: rgba(255, 255, 255, 0.5);
     width: 100px;
     height: 100px;
+    border-radius: 100px;
 }
+
 .result{
     margin: auto;
 }
@@ -21,5 +23,29 @@ body{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 90%;
+}
+.top{
+    
+    color: white;
+}
+.top p {
+    background-color: black;
+    margin-left: auto;
+    width: 45%;
+    padding: 10px;
+    text-align: right;
+}
+.top span{
+    font-size: 125%;
+    color: yellow;
+}
+
+.footer{
+    color: white;
+}
+.middle{
+    height: 200px;
+}
+.welcome{
+    background-image: url('assets/pcom-spotlight-prof-oak-169.jpg');
 }
