--- a/pokebattle/src/app/components/welcomepage/welcomepage.component.html
+++ b/pokebattle/src/app/components/welcomepage/welcomepage.component.html
@@ -1,3 +1,12 @@
+<nav class="navbar navbar-dark navbar-expand-sm justify-content-center">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="play">Play</a>
+      </li>
+    </ul>
+</nav> 
 <div  class="battlebox mb-5 welcome" >
-     
 </div>
