--- a/pokebattle/src/app/testpoke/testpoke.component.html
+++ b/pokebattle/src/app/testpoke/testpoke.component.html
@@ -2,6 +2,6 @@
     <div class="row">
         <button class="col-sm-4 btn btn-primary" (click)="getRandomPokemon()">Get a random Pokemon!</button>
     </div>
-    <p *ngIf="pokemon">{{pokemon.type}}</p>
-    <img [src]="pokemon.sprites?.front_default" *ngIf="pokemon">
+    <p *ngIf="pokemon">{{pokemon?.type}}</p>
+    <img [src]="pokemon?.sprites.front_default" *ngIf="pokemon">
 </div>
