--- a/pokebattle/src/app/app.component.html
+++ b/pokebattle/src/app/app.component.html
@@ -1,7 +1,7 @@
 
-<app-testpoke></app-testpoke>
+<!--<app-testpoke></app-testpoke>-->
 
-<!--<app-nasa-bg></app-nasa-bg>-->
-<app-welcome></app-welcome>
+<app-nasa-bg></app-nasa-bg>
+
 
 <router-outlet></router-outlet>
